tests/NormalTests/paczka1/small_fuzzy/76874766.err
Error in line 1: A196 S465 34,9
Error in line 10: OMsKW A176 82,3
